Sonarqube fix